# youyou-agent

./: CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.chat/: 0313.md  0316.md  0322.md  0323.md  0326.md  0327.md  0401.md  codex_review_standard.md
examples/: README.md  minimal_agent.rs
specs/: 0001_youyou_demand.md  0002_youyou_demand.md  0003_youyou_demand.md  0004_codex_prompt.md  0005_youyou_demand.md  0006_youyou_agent_design.md  0006_youyou_agent_design_claude.md  0006_youyou_agent_design_codex.md  0007_youyou_agent_design_review_by_codex.md  0007_youyou_agent_implement.md  0007_youyou_agent_implement_claude.md  0007_youyou_agent_implement_codex.md  0008_youyou_agent_review.md  0009_youyou_agent_review.md  0010_youyou_agent_review.md  0011_user_review.md  _0007_youyou_agent_design_review_by_codex.md  _youyou_agent_implement_codex.md  index.md
src/: lib.rs
src/api/: agent.rs  builder.rs  mod.rs  running_turn.rs  session.rs
src/application/: context_manager.rs  hook_registry.rs  memory_manager.rs  mod.rs  plugin_manager.rs  prompt_builder.rs  request_builder.rs  session_service.rs  skill_manager.rs  tool_dispatcher.rs  turn_engine.rs
src/domain/: config.rs  error.rs  event.rs  hook.rs  ledger.rs  mod.rs  state.rs  types.rs
src/ports/: mod.rs  model.rs  plugin.rs  storage.rs  tool.rs
src/prompt/: mod.rs  templates.rs
tests/: acceptance.rs  builder_contract.rs  compact_resume.rs  memory_pipeline.rs  prompt_request.rs  session_lifecycle.rs  tool_hooks.rs  turn_engine.rs
tests/support/: fake_memory_storage.rs  fake_plugin.rs  fake_provider.rs  fake_session_storage.rs  fake_tool.rs  mod.rs
