[package]
name = "youyou-agent"
version = "0.1.0"
authors = ["俞樾珲 <m18758428901@163.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/youyou-agent"
repository = "https://github.com/goo-yyh/youyou-agent"
homepage = "https://github.com/goo-yyh/youyou-agent"
description = "A single-session Rust agent kernel with ledger-backed recovery, tool execution, compaction, hooks, and memory orchestration."
readme = "README.md"
categories = ["development-tools"]
keywords = ["agent", "llm", "session", "tooling", "rust"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
indexmap = "2.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
